main.css
#game-container {
  min-width: 100vw;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

#game-container>canvas {
  border-radius: 5px;
}


h1{
    text-transform: uppercase;
    text-align: center;
    font-weight: bold;
    font-style: italic;
    font-size: 100px;
}

@import url(//fonts.googleapis.com/css?family=Vibur);
body {
  height:100%;
  background: #112 url(https://www.pixelstalk.net/wp-content/uploads/images2/Free-Hd-Dark-Wallpapers-Images.jpg)  center;
  background: size 1;
  margin:0;
  padding: 0;
}
.title {
  text-align: center;
  width: 65%;
  height: 250px;
  margin: auto;
  position: center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.title b{
  font: 100 15vh "Vibur";
  color: #fee;
  text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000;
}
.title b span{
  animation: blink linear infinite 2s;
}
@keyframes blink {
  78% {
    color: inherit;
    text-shadow: inherit;
  }
  79%{
     color: #333;
  }
  80% {
    
    text-shadow: none;
  }
  81% {
    color: inherit;
    text-shadow: inherit;
  }
  82% {
    color: #333;
    text-shadow: none;
  }
  83% {
    color: inherit;
    text-shadow: inherit;
  }
  92% {
    color: #333;
    text-shadow: none;
  }
  92.5% {
    color: inherit;
    text-shadow: inherit;
  }
}

canvas {
    padding: 0;
    margin: auto;
    display: block;
    width: 800px;
    height: 500px;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

